--- a/pixelflow_theme/templates/admin/login.html
+++ b/pixelflow_theme/templates/admin/login.html
@@ -1,24 +1,8 @@
+{% extends 'admin/base.html' %}
 {% load static %}
-<!doctype html>
-<html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="description" content="">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Required meta tags -->
 
-    <title>PixelFlow template</title>
-
-    <!-- Favicon -->
-    <link rel="icon" href="{% static 'admin/img/core-img/favicon.png' %}">
-
-    <!-- Master Stylesheet CSS -->
-    <link rel="stylesheet" href="{% static 'admin/style.css' %}">
-
-</head>
-
+{% block body %}
 <body class="login-area">
 
     <!-- Preloader -->
@@ -33,19 +17,6 @@
     <!-- ======================================
     ******* Page Wrapper Area Start **********
     ======================================= -->
-    {% if form.errors and not form.non_field_errors %}
-    <p class="errornote">
-    Please correct the error below. Please correct the errors below
-    </p>
-    {% endif %}
-
-    {% if form.non_field_errors %}
-        {% for error in form.non_field_errors %}
-        <p class="errornote">
-            {{ error }}
-        </p>
-        {% endfor %}
-    {% endif %}
     <div class="main-content- h-100vh">
         <div class="container h-100">
             <div class="row h-100 align-items-center justify-content-center">
@@ -63,18 +34,28 @@
                         <div class="card">
                             <div class="card-body p-4">
 
+                                <!-- Error box-->
+                                {% if form.non_field_errors %}
+                                    {% for error in form.non_field_errors %}
+                                    <div class="alert bg-danger animated-alert" style="color: white;">
+                                        <span class="closebtn" onclick="this.parentElement.style.display='none';">&times;</span>
+                                        <strong>Error - </strong> {{error}}
+                                    </div>
+                                    {% endfor %}
+                                {% endif %}
+
                                 <!-- Logo -->
                                 <h4 class="font-24 mb-30">Login</h4>
 
                                 <form action="{{ app_path }}" method="post" id="login-form">{% csrf_token %}
                                     <div class="form-group">
-                                        {{ form.username.errors }}
                                         <input class="form-control login" name="{{form.username.name}}" type="text" id="{{ form.username.id_for_label }}" required="" placeholder="Enter your email" maxlength="254" autocapitalize="none" autofocus>
+                                        {% if form.username.errors %}<label id="cemail-error" class="error mt-2 text-danger" for="cemail">{{ form.username.errors }}</label>{% endif %}
                                     </div>
 
                                     <div class="form-group">
-                                        {{ form.password.errors }}
                                         <input class="form-control login" name="password" type="password" required="" id="{{ form.password.id_for_label }}" placeholder="Enter your password" autocomplete="current-password">
+                                        {% if form.password.errors %}<label id="cemail-error" class="error mt-2 text-danger" for="cemail">{{ form.password.errors }}</label>{% endif %}
                                     </div>
 
                                     <div class="form-group mb-0">
@@ -103,8 +84,35 @@
     <script src="{% static 'admin/js/bundle.js' %}"></script>
 
     <!-- Active JS -->
+    <script src="{% static 'admin/js/canvas.js' %}"></script>
+    <script src="{% static 'admin/js/collapse.js' %}"></script>
+    <script src="{% static 'admin/js/settings.js' %}"></script>
+    <script src="{% static 'admin/js/template.js' %}"></script>
     <script src="{% static 'admin/js/default-assets/active.js' %}"></script>
 
-</body>
+    <script>
+        // Get all elements with class="closebtn"
+        var close = document.getElementsByClassName("closebtn");
+        var i;
 
-</html>
+        // Loop through all close buttons
+        for (i = 0; i < close.length; i++) {
+            // When someone clicks on a close button
+            close[i].onclick = function() {
+
+                // Get the parent of <span class="closebtn"> (<div class="alert">)
+                var div = this.parentElement;
+
+                // Set the opacity of div to 0 (transparent)
+                div.style.opacity = "0";
+
+                // Hide the div after 600ms (the same amount of milliseconds it takes to fade out)
+                setTimeout(function() {
+                    div.style.display = "none";
+                }, 600);
+            }
+        }
+    </script>
+
+</body>
+{% endblock %}
