--- a/pixelflow_theme/templates/admin/base.html
+++ b/pixelflow_theme/templates/admin/base.html
@@ -23,6 +23,8 @@
 
 </head>
 
+<body {% if 'login' in request.path %}class="login-area" {% endif %}>
 {% block body %} {% endblock %}
+</body>
 
 </html>
