--- a/pixelflow_theme/templates/admin/app_list.html
+++ b/pixelflow_theme/templates/admin/app_list.html
@@ -2,23 +2,21 @@
 
 {% if app_list %}
     {% for app in app_list %}
-        <!-- Side Menu area -->
-        <nav class="sidebar sidebar-offcanvas" id="sidebar">
             <ul class="nav">
                 <li class="nav-item">
                     <a class="nav-link" data-toggle="collapse" href="#advanced" aria-expanded="false" aria-controls="advanced">
                         <span class="menu-title">{{ app.name }}</span>
                         <i class="ti-angle-right"></i>
                     </a>
-                    <div class="collapse" id="advanced">
-                        <ul class="nav flex-column sub-menu">
-                            {% for model in app.models %}
-                                <li class="nav-item"> <a class="nav-link" href="clint-list.html">{{ model.name }}</a></li>
-                            {% endfor %}
+                    {% for model in app.models %}
+                        <div class="collapse {% if model.admin_url in request.path|urlencode %}show{% endif %}" id="advanced">
+                            <ul class="nav flex-column sub-menu">
+                            
+                                <li class="nav-item"> <a class="nav-link {% if model.admin_url in request.path|urlencode %}active{% endif %}" href="{{ model.admin_url }}">{{ model.name }}</a></li>
+                    {% endfor %}
                         </ul>
                     </div>
                 </li>
             </ul>
-        </nav>
     {% endfor %}
 {% endif %}
