--- a/pixelflow_theme/templates/admin/base_site.html
+++ b/pixelflow_theme/templates/admin/base_site.html
@@ -25,9 +25,9 @@
             <div class="main-panel">
                 <div class="content-wrapper">
                     <div class="container">
-                        <div class="height-900"></div>
+                        {% block content%}
+                        {% endblock %}
                     </div>
-
                     {% include 'admin/includes/footer.html' %}
                 </div>
             </div>
@@ -35,5 +35,7 @@
     </div>
 
     {% include 'admin/includes/footerjs.html' %}
+
+    {% block extrajs %}{% endblock %}
 
 {% endblock %}
