--- a/pixelflow_theme/templates/admin/includes/nav.html
+++ b/pixelflow_theme/templates/admin/includes/nav.html
@@ -1,3 +1,5 @@
+{% load static %}
+
 <!-- Top bar area -->
 <nav class="navbar col-lg-12 col-12 p-0 fixed-top d-flex flex-row">
     <div class="text-center navbar-brand-wrapper d-flex align-items-center justify-content-center">
@@ -12,27 +14,7 @@
                 <line x1="3" y1="18" x2="21" y2="18"></line>
             </svg>
         </button>
-        <ul class="navbar-nav mr-lg-2">
-            <li class="nav-item app-search d-none d-md-block">
-                <form role="search" class=""><input type="text" placeholder="Search..." class="form-control">
-                    <button type="submit" class="search-btn mr-0"><i class="fa fa-search"></i></button></form>
-            </li>
-        </ul>
         <ul class="top-navbar-area navbar-nav navbar-nav-right">
-            <li class="nav-item dropdown dropdown-animate">
-                <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
-                    <img class="mr-2 flex-30-img" src="img/shop-img/l5.png" alt="">English<i class="arrow_carrot-down"></i>
-                </a>
-                <div class="dropdown-menu dropdown-menu-right navbar-dropdown preview-list" aria-labelledby="notificationDropdown">
-                    <p class="mb-0 font-weight-normal float-left dropdown-header">Language</p>
-
-                    <a href="#" class="dropdown-item preview-item d-flex align-items-center"><img class="language-thumb" src="img/shop-img/l2.jpg" alt=""> LOP</a>
-                    <a href="#" class="dropdown-item preview-item d-flex align-items-center"><img class="language-thumb" src="img/shop-img/l3.jpg" alt=""> KYI</a>
-                    <a href="#" class="dropdown-item preview-item d-flex align-items-center"><img class="language-thumb" src="img/shop-img/l4.jpg" alt=""> RTY</a>
-                    <a href="#" class="dropdown-item preview-item d-flex align-items-center"><img class="language-thumb" src="img/shop-img/l1.jpg" alt=""> IND</a>
-                </div>
-            </li>
-
             <li class="nav-item dropdown dropdown-animate">
                 <a class="nav-link count-indicator dropdown-toggle" id="notificationDropdown" href="#" data-toggle="dropdown">
                     <i class="fa fa-bell-o"></i>
@@ -100,13 +82,10 @@
 
             <li class="nav-item nav-profile dropdown dropdown-animate">
                 <a class="nav-link dropdown-toggle" href="#" data-toggle="dropdown" id="profileDropdown">
-                    <img src="img/member-img/contact-2.jpg" alt="profile" />
+                    <img src="{% static 'admin/img/member-img/contact-2.jpg' %}" alt="profile" />
                 </a>
                 <div class="dropdown-menu dropdown-menu-right navbar-dropdown profile-top" aria-labelledby="profileDropdown">
-                    <a href="#" class="dropdown-item"><i class="zmdi zmdi-account profile-icon" aria-hidden="true"></i> My profile</a>
-                    <a href="#" class="dropdown-item"><i class="zmdi zmdi-email-open profile-icon" aria-hidden="true"></i> Messages</a>
-                    <a href="#" class="dropdown-item"><i class="zmdi zmdi-brightness-7 profile-icon" aria-hidden="true"></i> Settings</a>
-                    <a href="#" class="dropdown-item"><i class="ti-unlink profile-icon" aria-hidden="true"></i> Sign-out</a>
+                    <a href="{% url 'admin:logout' %}" class="dropdown-item"><i class="ti-unlink profile-icon" aria-hidden="true"></i> Sign-out</a>
                 </div>
             </li>
         </ul>
